[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/home_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/COLONNA.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.521569, 0.521569, 0.521569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[node name="home_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="new" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 245.648
margin_top = 152.034
margin_right = 428.648
margin_bottom = 265.034
custom_fonts/font = SubResource( 1 )
text = "new"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="open" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 233.54
margin_top = 293.305
margin_right = 450.54
margin_bottom = 406.305
custom_fonts/font = SubResource( 1 )
text = "open"

[node name="popup" type="Panel" parent="."]
visible = false
margin_left = 173.0
margin_top = 157.0
margin_right = 592.0
margin_bottom = 424.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="popup"]
margin_left = 63.0
margin_top = 9.0
margin_right = 357.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
text = "set canvas size"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="width" type="TextEdit" parent="popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 17.5
margin_top = 29.5
margin_right = 66.5
margin_bottom = 50.5
text = "16"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Width" type="Label" parent="popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = 29.5
margin_right = -30.5
margin_bottom = 51.5
custom_fonts/font = SubResource( 4 )
text = "Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hight" type="TextEdit" parent="popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 17.5
margin_top = -10.5
margin_right = 66.5001
margin_bottom = 8.5
text = "16"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hight" type="Label" parent="popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -10.5
margin_right = -32.5
margin_bottom = 11.5
custom_fonts/font = SubResource( 4 )
text = "Hight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="Button" parent="popup"]
margin_left = 160.0
margin_top = 215.0
margin_right = 249.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 5 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 409.0
margin_top = 300.0
margin_right = 612.0
margin_bottom = 358.0
window_title = "Invalid values!"
dialog_text = "Please enter the values again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="open_dialog" type="FileDialog" parent="."]
margin_left = 331.0
margin_top = 119.0
margin_right = 646.0
margin_bottom = 385.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a File"
mode = 0
access = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="popup/Accept" to="." method="_on_Accept_pressed"]
[connection signal="file_selected" from="open_dialog" to="." method="_on_open_dialog_file_selected"]
